force-app/main/default/objects/Account/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Account selected must have a Record Type of Agency.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <infoMessage>The Account selected must have a Record Type of Agency.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advertisers/Brands</relationshipLabel>
    <relationshipName>Advertisers_Brands</relationshipName>
    <type>Lookup</type>
</CustomField>