force-app/main/default/objects/Account/fields/Agency_Owner__c.field-meta.xml
<CustomField>
    <fullName>Agency_Owner__c</fullName>
    <inlineHelpText>This will be a lookup.</inlineHelpText>
    <label>Agency Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Andresa Strahm</fullName>
            </value>
            <value>
                <fullName>Chris Bateman</fullName>
            </value>
            <value>
                <fullName>Eric Anderson</fullName>
            </value>
            <value>
                <fullName>Leah Mindemann</fullName>
            </value>
            <value>
                <fullName>Peter Rupert</fullName>
            </value>
            <value>
                <fullName>Shane Ennenga</fullName>
            </value>
            <value>
                <fullName>Tom Bock</fullName>
            </value>
            <value>
                <fullName>Tom Schoen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>