force-app/main/default/objects/Account/fields/Common_Name__c.field-meta.xml
<CustomField>
    <fullName>Common_Name__c</fullName>
    <label>Common Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>