force-app/main/default/objects/Account/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <inlineHelpText>Enter the common name in the Account Name field and the Inc/LLC/etc. name here.</inlineHelpText>
    <label>Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>