force-app/main/default/objects/Account/fields/Fiscal_Year_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Start_Date__c</fullName>
    <label>Fiscal Year Start Date</label>
    <type>Date</type>
</CustomField>