force-app/main/default/objects/Account/fields/FJM_Naviga_ID__c.field-meta.xml
<CustomField>
    <fullName>FJM_Naviga_ID__c</fullName>
    <label>FJM Naviga ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>