force-app/main/default/objects/Account/fields/Old_Org_18_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Org_18_ID__c</fullName>
    <label>Old Org 18 ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>