force-app/main/default/objects/Account/recordTypes/Advertiser.recordType-meta.xml
<RecordType>
    <fullName>Advertiser</fullName>
    <active>true</active>
    <label>Advertiser</label>
</RecordType>