force-app/main/default/objects/Account/recordTypes/Publisher.recordType-meta.xml
<RecordType>
    <fullName>Publisher</fullName>
    <active>true</active>
    <label>Publisher</label>
</RecordType>