force-app/main/default/objects/Account/validationRules/Brands_Must_Have_Advertiser_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Brands_Must_Have_Advertiser_Parent</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Brand&quot;
&amp;&amp;
ISBLANK(ParentId)</errorConditionFormula>
    <errorMessage>Brands must have an Advertiser listed as a Parent Account.</errorMessage>
</ValidationRule>