force-app/main/default/objects/Account/listViews/All_Advertisers.listView-meta.xml
<ListView>
    <fullName>All_Advertisers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Agency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Advertiser</value>
    </filters>
    <label>Advertisers - All</label>
</ListView>