force-app/main/default/objects/Account/listViews/All_Agencies.listView-meta.xml
<ListView>
    <fullName>All_Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Agency</value>
    </filters>
    <label>Agencies - All</label>
</ListView>