force-app/main/default/objects/Account/listViews/All_Publishers.listView-meta.xml
<ListView>
    <fullName>All_Publishers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Fiscal_Year_Start_Date__c</columns>
    <columns>Account_18_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Publisher</value>
    </filters>
    <label>Publishers - All</label>
</ListView>