force-app/main/default/objects/Account/listViews/Brand_All.listView-meta.xml
<ListView>
    <fullName>Brand_All</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Agency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Brand</value>
    </filters>
    <label>Brand - All</label>
</ListView>